localization global changes

--- a/src/main/resources/localization.properties
+++ b/src/main/resources/localization.properties
@@ -3,14 +3,14 @@ errorArg = Too many input arguments. Must be single. First one applied.
 errorPath = Can't validate path. Using default (program) folder.
 
 #Counting
-totalCount = Total files and folder count
-dirCount = folders
-fileCount = files.
-man = MANUAL:
-quit =  quit - to exit program
-cd =    cd <PATH> - to change operating directory to PATH
-recent= recent - to view recent used folders
-recentDir=  Recent folders
-enterRecent = Enter number fo recent viewed folder >
-newCommand = Enter new command >
+total = Total files and folder count
+dirs = folders
+files = files.
+help = HELP:
+quit = quit - to exit program
+cd = cd <PATH> - to change operating directory to PATH
+recent = recent - to view recent used folders
+rDirs =  Recent folders
+newRecent = Enter number for recent viewed folder >
+newCommand = Enter new command (help to list manual)>
 
