- fixed some bugs

--- a/src/main/resources/localization.properties
+++ b/src/main/resources/localization.properties
@@ -1,16 +1,16 @@
 #Errors
 errorArg = Too many input arguments. Must be single. First one applied.
-errorPath = Can't validate path. Using default (program) folder.
+PATH_ERROR = Can't validate path. Using default (program) folder.
 
 #Counting
-total = Total files and folder count
-dirs = folders
-files = files.
-help = HELP:
-quit = quit - to exit program
-cd = cd <PATH> - to change operating directory to PATH
-recent = recent - to view recent used folders
-rDirs =  Recent folders
-newRecent = Enter number for recent viewed folder >
-newCommand = Enter new command (help to list manual)>
+WORD_TOTAL = Total files and folder count
+WORD_FOLDERS= folders
+WORD_FILES=files.
+HELP=HELP:
+QUIT=quit - to exit program
+CD = cd <PATH> - to change operating directory to PATH
+RECENT = recent - to view recent used folders
+R_DIRS =  Recent folders
+NUM_RECENT = Enter number for recent viewed folder >
+NEW_COM = Enter new command (help to list manual)>
 
