--- a/src/main/resources/localization.properties
+++ b/src/main/resources/localization.properties
@@ -1,15 +1,19 @@
 #Errors
-PATH_ERROR = Can't validate path. Using default (program) folder.
+PATH_ERROR=Can't validate path. Using default (program) folder.\n
 
 #Counting
-WORD_TOTAL = Total files and folder count
-WORD_FOLDERS= folders
-WORD_FILES=files.
+HELLO=FileSystemNavigator started...\n
 HELP=HELP:
-QUIT=quit - to exit program
-CD = cd <PATH> - to change operating directory to PATH
-RECENT = recent - to view recent used folders
-R_DIRS =  Recent folders
-NUM_RECENT = Enter number for recent viewed folder >
-NEW_COM = Enter new command (help to list manual)>
+CD=CD <PATH>    Changing operating directory to PATH, if exists.
+LS=LS           Listing current directory.
+NEW_COM=Enter new command (help to list manual)\n
+NO_RECENT=No recent files to view!\n
+NUM_RECENT=Enter number for recent viewed folder
+QUIT=QUIT         Exiting program
+REC=REC          Viewing recent used folders
+R_DIRS=Recent folders
+WORD_TOTAL=Total files and folder count
+WORD_FOLDERS=folders
+WORD_FILES=files.
+UNKNOWN_COM=Unknown command!\n
 
