--- a/src/main/resources/localization.properties
+++ b/src/main/resources/localization.properties
@@ -1,8 +1,8 @@
 #Errors
-PATH_ERROR=Can't validate path. Using default (program) folder.\n
+PATH_ERROR=Can't validate path. Using previous folder.\n
 
 #Counting
-HELLO=FileSystemNavigator started...\n
+HELLO=FileSystemNavigator started...\n\nEnter new command (help to list manual)\n
 HELP=HELP:
 CD=CD <PATH>    Changing operating directory to PATH, if exists.
 LS=LS           Listing current directory.
