--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.logger.errorLog=warn, file
-log4j.logger.user=info, file, console
+log4j.rootLogger=info, file, console
 
 log4j.appender.file=org.apache.log4j.FileAppender
 log4j.appender.file.File=main.log
